# index.js
@@ -13,6 +13,7 @@ const testQuestions = require('./controllers/testQuestions');
 const subjectUsers = require('./controllers/subjectUsers');
 const userLogin = require('./controllers/userLogin');
 const groups = require('./controllers/groups');
+const testResults = require('./controllers/testResults');
 const authentication = require('./controllers/middleware/authentication');
 
 const swaggerUi = require('swagger-ui-express');
@@ -35,16 +36,16 @@ createMiddleware(swaggerFilePath, app, (err, middleware) => {
     middleware.validateRequest()
   );
   // app.use(authentication);
+  app.use('/subjects', subjects);
+  app.use('/questions', questions);
+  app.use('/users', users);
+  app.use('/answers', answers);
+  app.use('/tests', tests);
+  app.use('/testQuestions', testQuestions);
+  app.use('/subjectUsers', subjectUsers);
+  app.use('/users/login', userLogin);
+  app.use('/groups', groups);
+  app.use('/tests/:testId/results', testResults);
 });
-
-app.use('/subjects', subjects);
-app.use('/questions', questions);
-app.use('/users', users);
-app.use('/answers', answers);
-app.use('/tests', tests);
-app.use('/testQuestions', testQuestions);
-app.use('/subjectUsers', subjectUsers);
-app.use('/users/login', userLogin);
-app.use('/groups', groups);
 
 app.listen(process.env.PORT);
